<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="4dp">

    <TextView
        android:id="@+id/moveMethodDetail"
        android:layout_weight="2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="12sp"
        android:text="@string/det" />

    <Button
        android:id="@+id/moveButton"
        android:layout_weight="6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:text="@string/simple_button"/>

    <TextView
        android:id="@+id/movePower"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="12sp"
        android:text="@string/pwr" />

    <TextView
        android:id="@+id/moveAccuracy"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="12sp"
        android:text="@string/acc" />

    <TextView
        android:id="@+id/movePP"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="12sp"
        android:text="@string/pp" />

</LinearLayout>
