<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="4dp"
    android:layout_marginBottom="4dp">

    <TextView
        android:id="@+id/dealsReceives"
        android:layout_weight="3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="12sp"
        android:text="@string/takesDamage" />

    <Button
        android:id="@+id/typeButton"
        android:layout_weight="3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:text="@string/simple_button"/>

    <TextView
        android:id="@+id/at"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="12sp"
        android:text="@string/at" />

    <TextView
        android:id="@+id/multiplier"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="12sp"
        android:text="@string/efficacy" />

</LinearLayout>
