<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.evanfuhr.pokemondatabase.fragments.MoveDetailsFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:cardBackgroundColor="?attr/colorButtonNormal">

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/increasedStat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_span="2"
                    android:ems="10"
                    android:gravity="start"
                    android:inputType="none"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:text="@string/increases" />

                <Button
                    android:id="@+id/increasedStatButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_span="2"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="none"
                    android:text="@string/attack" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/decreasedStat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_span="2"
                    android:ems="10"
                    android:gravity="start"
                    android:inputType="none"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:text="@string/decreases" />

                <Button
                    android:id="@+id/decreasedStatButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_span="2"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="none"
                    android:text="@string/special_attack" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/likesFlavor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_span="2"
                    android:ems="10"
                    android:gravity="start"
                    android:inputType="none"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:text="@string/likes" />

                <Button
                    android:id="@+id/likesFlavorButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_span="2"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="none"
                    android:text="@string/spicy" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/hatesFlavor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_span="2"
                    android:ems="10"
                    android:gravity="start"
                    android:inputType="none"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:text="@string/hates" />

                <Button
                    android:id="@+id/hatesFlavorButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_span="2"
                    android:ems="10"
                    android:gravity="center"
                    android:inputType="none"
                    android:text="@string/dry" />

            </TableRow>

        </TableLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>
